[package]
name = "rs_admin_cred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5"
tokio = { version="1", features=["full"] }
jsonwebtoken = "8"
serde = { version="1", features=["derive"] }
serde_json = "1"

